--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -221,21 +221,29 @@ main {
     padding: 5px;
     border-radius: 5px;
     box-shadow: 0px 1px 0px 0px rgba(0, 0, 0, 0.1);
+    padding-right: 40px;
 }
 
 .cart li button {
-    background-color: #ff6b6b50;
+    background-color: #ff6b6b;
     color: white;
     border: none;
     padding: 2px 5px;
-    border-radius: 5px;
+    border-radius:  10px;
     cursor: pointer;
     height: 30px;
     width: 30px;
+    position: absolute;
+    right: 15px;
+    display: none;
+}
+
+.cart li:hover button {
+    display: block;
 }
 
 .cart li button:hover {
-    background-color: #ff6b6b;
+    background-color: #ff6b6b50;
 }
 
 .cart-total {
@@ -377,7 +385,7 @@ main {
     flex-direction: column;
     gap: 10px;
     backdrop-filter: blur(5px);
-/*     width: 30px;
+    /*     width: 30px;
     height: 30px;
     background-color: red; */
     bottom: 20px;
