--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -83,6 +83,18 @@ main {
     fill: #66666650;
 }
 
+#open-help{
+    position: absolute;
+    right: 60px;
+    top: 30px;
+    width: 80px;
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+    transition: all .3s ease;
+    
+}
+
 /* Lista de productos */
 .product-grid {
     display: grid;
@@ -331,24 +343,26 @@ main {
 /* Estilos del modal */
 .modal {
     display: none;
-    /* Oculto por defecto */
     position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
+    inset: 0;
     background-color: rgba(0, 0, 0, 0.8);
     z-index: 1000;
+    backdrop-filter: blur(5px);
+    align-items: center;
+    justify-content: center;
+    padding: 20px;
 }
 
 .modal-content {
     background-color: #fff;
     padding: 20px;
-    margin: 15% auto;
-    width: 50%;
+    width: 60%;
+    max-width: 800px;
     border-radius: 10px;
     text-align: center;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    max-height: 80vh;
+    overflow-y: auto; 
 }
 
 .close {
