--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -11,12 +11,15 @@ body {
 header {
     background-color: #2e8b57;
     color: white;
-    padding: 20px;
+    padding: 15px;
     text-align: center;
     position: fixed;
     top: 0;
     width: 100%;
     z-index: 1000;
+    box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.3);
+    border-bottom-right-radius: 5px;
+    border-bottom-left-radius: 5px;
 }
 
 .logo img {
@@ -72,29 +75,41 @@ main {
     height: 40px;
     width: 40px;
     transition: all .3s ease;
+    border-radius: 5px;
 }
 
 .clear-button:hover {
     background-color: #ff000090;
-    border-radius: 5px;
+        
+    &:active {
+        background-color: #00000020;
+        border-radius: 50%;
+    }
 }
 
 #clear-search .trash-icon {
     fill: #66666650;
 }
 
-#open-help{
+#open-help {
     position: absolute;
     right: 60px;
     top: 30px;
-    width: 80px;
+    width: 50px;
+    padding: 0;
     background-color: transparent;
     border: none;
     cursor: pointer;
     transition: all .3s ease;
-    border-radius: 50%;
+    border-radius: 5px;
+
     &:hover {
         background-color: #00000050;
+    }
+    
+    &:active {
+        background-color: #00000020;
+        border-radius: 50%;
     }
 }
 
@@ -244,7 +259,7 @@ main {
     color: white;
     border: none;
     padding: 2px 5px;
-    border-radius:  10px;
+    border-radius: 10px;
     cursor: pointer;
     height: 30px;
     width: 30px;
@@ -259,6 +274,11 @@ main {
 
 .cart li button:hover {
     background-color: #ff6b6b50;
+        
+    &:active {
+        background-color: #00000020;
+        border-radius: 50%;
+    }
 }
 
 .cart-total {
@@ -365,7 +385,7 @@ main {
     text-align: center;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     max-height: 80vh;
-    overflow-y: auto; 
+    overflow-y: auto;
 }
 
 .close {
@@ -539,25 +559,25 @@ main {
 }
 
 footer {
-    text-align: center;
-    background-color: #2e8b57; /* Verde oscuro */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #2e8b57;
     color: white;
     font-size: 14px;
     position: fixed;
     bottom: 0;
     width: 100%;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+    box-shadow: 0px -5px 10px rgba(0, 0, 0, 0.3);
 }
 
-footer p{
+footer p {
     margin: 5px;
 }
 
-footer a {
-    color: #b0ffd5; 
-    text-decoration: none;
-    font-weight: bold;
-}
-
-footer a:hover {
-    text-decoration: underline;
+footer #emailContact {
+    position: absolute;
+    right: 15px;
 }
