--- a/assets/css/styles_cotizacion.css
+++ b/assets/css/styles_cotizacion.css
@@ -197,25 +197,25 @@ button:hover {
 }
 
 footer {
-    text-align: center;
-    background-color: #2e8b57; /* Verde oscuro */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #2e8b57;
     color: white;
     font-size: 14px;
     position: fixed;
     bottom: 0;
     width: 100%;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+    box-shadow: 0px -5px 10px rgba(0, 0, 0, 0.3);
 }
 
-footer p{
+footer p {
     margin: 5px;
 }
 
-footer a {
-    color: #b0ffd5;
-    text-decoration: none;
-    font-weight: bold;
-}
-
-footer a:hover {
-    text-decoration: underline;
+footer #emailContact {
+    position: absolute;
+    right: 15px;
 }
