--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -378,14 +378,14 @@ main {
 
 .modal-content {
     background-color: #fff;
-    padding: 20px;
+    padding: 10px;
     width: 60%;
     max-width: 800px;
     border-radius: 10px;
-    text-align: center;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     max-height: 80vh;
     overflow-y: auto;
+    margin-bottom: 10px;
 }
 
 .close {
@@ -396,6 +396,15 @@ main {
     position: absolute;
     top: 10px;
     right: 20px;
+}
+
+.modal-content h2{
+    text-align: center;
+}
+
+.modal-content ul li{
+    list-style: none;
+    margin-left: 20px;
 }
 
 .titulo-card,
@@ -558,7 +567,7 @@ main {
 
 }
 
-footer {
+.footer {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -573,11 +582,11 @@ footer {
     box-shadow: 0px -5px 10px rgba(0, 0, 0, 0.3);
 }
 
-footer p {
+.footer p {
     margin: 5px;
 }
 
-footer #emailContact {
+.footer #emailContact {
     position: absolute;
     right: 15px;
 }
